# serializer version: 1
# name: TestDataURLs.test_base64_encoded_data_url
  '''
  Hello, World!
  
  '''
# ---
# name: TestDataURLs.test_data_url_multiline_html
  '''
  <!DOCTYPE html><html><body><p>Line 1</p><p>Line 2</p></body></html>
  
  '''
# ---
# name: TestDataURLs.test_data_url_with_semicolon_in_content
  '''
  foo;bar
  
  '''
# ---
# name: TestDataURLs.test_empty_data_url
  '''
  
  
  '''
# ---
# name: TestDataURLs.test_html_data_url
  '''
  <h1>Hello</h1>
  
  '''
# ---
# name: TestDataURLs.test_plain_text_data_url
  '''
  Hello%20World
  
  '''
# ---
# name: TestDataURLs.test_plain_text_with_charset
  '''
  Hello
  
  '''
# ---
# name: TestEdgeCases.test_data_url_with_special_chars
  '''
  Special chars: !@
  
  '''
# ---
# name: TestEdgeCases.test_empty_path_http_url
  '''
  Root page
  
  '''
# ---
# name: TestEdgeCases.test_url_with_default_http_port
  '''
  Default port response
  
  '''
# ---
# name: TestEdgeCases.test_url_with_default_https_port
  '''
  HTTPS default port
  
  '''
# ---
# name: TestEdgeCases.test_url_with_ipv4_host
  '''
  Response from IP
  
  '''
# ---
# name: TestEdgeCases.test_url_with_ipv6_host
  '''
  IPv6 response
  
  '''
# ---
# name: TestEdgeCases.test_url_with_userinfo
  '''
  Authenticated content
  
  '''
# ---
# name: TestFileURLs.test_file_url_html
  '''
  <!DOCTYPE html>
  <html>
  <head>
      <title>Test Page</title>
  </head>
  <body>
      <h1>Hello, World!</h1>
      <p>This is a test HTML file.</p>
  </body>
  </html>
  
  
  '''
# ---
# name: TestFileURLs.test_file_url_text
  '''
  This is a plain text test file.
  Line 2 of the test file.
  Line 3 with some special characters: àéîöü
  
  
  '''
# ---
# name: TestFileURLs.test_file_url_with_localhost
  '''
  This is a plain text test file.
  Line 2 of the test file.
  Line 3 with some special characters: àéîöü
  
  
  '''
# ---
# name: TestHTTPRedirects.test_http_redirect
  '''
  Content after redirect
  
  '''
# ---
# name: TestHTTPSURLs.test_https_simple_html
  '''
  <html><body><h1>Hello from HTTPS</h1></body></html>
  
  '''
# ---
# name: TestHTTPSURLs.test_https_with_path_and_query
  '''
  Secure page content
  
  '''
# ---
# name: TestHTTPURLs.test_http_plain_text
  '''
  This is plain text from HTTP server.
  
  '''
# ---
# name: TestHTTPURLs.test_http_simple_html
  '''
  <html><body><h1>Hello from HTTP</h1></body></html>
  
  '''
# ---
# name: TestHTTPURLs.test_http_with_custom_port
  '''
  Response from port 8080
  
  '''
# ---
# name: TestHTTPURLs.test_http_with_fragment
  '''
  Page with section
  
  '''
# ---
# name: TestHTTPURLs.test_http_with_path
  '''
  Page content
  
  '''
# ---
# name: TestHTTPURLs.test_http_with_query
  '''
  Search results
  
  '''
# ---
# name: TestInvalidURLs.test_invalid_url_format
  '''
  Usage: main [OPTIONS] URL
  Try 'main --help' for help.
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Invalid value for 'URL': not-a-valid-url                                     │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: TestInvalidURLs.test_missing_scheme
  '''
  Usage: main [OPTIONS] URL
  Try 'main --help' for help.
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Invalid value for 'URL': example.com                                         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: TestInvalidURLs.test_unsupported_scheme
  ''
# ---
